adapting directory structure

--- a/bld/qtcreator/tenacitas.plantuml_editor.qrc
+++ b/bld/qtcreator/tenacitas.plantuml_editor.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>plant_uml.png</file>
+        <file>../../res/plant_uml.png</file>
     </qresource>
 </RCC>
